# pcc-libs

./: Makefile.in  README.md  configure  configure.ac
csu/: Makefile.in  README
csu/darwin/: Makefile  common.c  common.h  macho.h
csu/linux/: Makefile  common.c  common.h  crtbegin.c  crtend.c
csu/netbsd/: common.h  crtbegin.c  crtend.c
libF77/: abort_.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  complex  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_erf.c  d_erfc.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  erf.c  getarg_.c  h_abs.c  h_dim.c  h_dnnt.c  (+71 more)
libI77/: backspace.c  close.c  dballoc.c  dfe.c  due.c  endfile.c  err.c  fio.h  fmt.c  fmt.h  fmtlib.c  iio.c  inquire.c  lib.c  lio.c  lio.h  lread.c  open.c  pwd.c  rdfmt.c  rewind.c  rsfe.c  sfe.c  sue.c  uio.c  util.c  wrtfmt.c  wsfe.c
libpcc/: Makefile  Makefile.in  _alloca.c  _ftol.asm  _ftol.c  adddi3.c  anddi3.c  ashldi3.c  ashrdi3.c  bitcnt.c  cmpdi2.c  cxmuldiv.c  divdi3.c  fixdfdi.c  fixsfdi.c  fixunsdfdi.c  fixunssfdi.c  floatdidf.c  floatdisf.c  floatunsdidf.c  iordi3.c  lshldi3.c  lshrdi3.c  moddi3.c  muldi3.c  negdi2.c  notdi2.c  qdivrem.c  quad.h  signbit.c  ssp.c  subdi3.c  ucmpdi2.c  udivdi3.c  umoddi3.c  unwind.c  xordi3.c
libpcc/include/: libpcc_float.h  libpcc_limits.h  libpcc_stdarg.h  stdarg.h  (+3 more)
libsoftfloat/: Makefile.in  fpgetmask.c  fpgetround.c  fpgetsticky.c  fpsetmask.c  fpsetround.c  fpsetsticky.c  softfloat-specialize
(+10 files in other folders)
